[package]
name = "java-props"
version = "0.1.2"
authors = ["Jaden Buchan <me@jaden.bio>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/jad3n/java-props"
documentation = "https://docs.rs/java-props/0.1"
description = """
This crate is designed to parse and
modify .properties files, which are
frequently used by Java applications.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"